# picoagents

./: .gitignore  COMPLETE_AGENT_LAB.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_ROADMAP.md  LICENSE  README.md  SECURITY.md  computer.txt  docker-compose.yml  puzzle_game.py  pyproject.toml
picoagent/: __init__.py  bus.py  cli.py  config.py  cron.py  heartbeat.py  hooks.py  mcp.py  mcp_client.py  session.py  templates.py
picoagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
picoagent/agent/: context.py  loop.py  subagents.py
picoagent/channels/: __init__.py  base.py  cli.py  discord_.py  email.py  slack.py  telegram.py  utils.py  whatsapp.py
picoagent/core/: __init__.py  adaptive.py  dual_memory.py  memory.py  scheduler.py
picoagent/providers/: __init__.py  registry.py
plans/: improvements.md
skills/: README.md
tests/: test_adaptive.py  test_agent_loop_fallback.py  test_cli_cron_runner.py  test_config.py  test_context_prompt_cache.py  test_cron_tool_path.py  test_discord_channel.py  test_dual_memory.py  test_email_channel.py  test_file_sandbox.py  test_markdown_skills.py  test_mcp.py  test_mcp_client.py  test_memory.py  test_provider_get_default_model.py  test_provider_registry_split.py  test_scheduler.py  test_search_tool_prices.py  test_session_manager.py  test_shell_deny_patterns.py  test_shell_sandbox.py  test_skills.py  test_slack_channel.py  test_split_message_shared.py  test_telegram_channel.py  test_templates.py  test_tool_validation.py  test_whatsapp_channel.py
whatsapp-bridge/: package-lock.json  package.json
(+16 files in other folders)
